Update Building an Emotion Detector with LittleVGG.ipynb

--- a/Emotion-Age-Gender-Detector/Building an Emotion Detector with LittleVGG.ipynb
+++ b/Emotion-Age-Gender-Detector/Building an Emotion Detector with LittleVGG.ipynb
@@ -485,7 +485,7 @@
    "source": [
     "from keras.models import load_model\n",
     "\n",
-    "classifier = load_model('/home/Trained Models/emotion_little_vgg_3.h5')"
+    "classifier = load_model('emotion_little_vgg_3.h5')"
    ]
   },
   {
@@ -653,7 +653,7 @@
     "        rects.append((x,w,y,h))\n",
     "    return rects, allfaces, img\n",
     "\n",
-    "img = cv2.imread(\"rajeev.jpg\")\n",
+    "img = cv2.imread(\"Tanup.jpg\")\n",
     "rects, faces, image = face_detector(img)\n",
     "\n",
     "i = 0\n",
@@ -695,7 +695,7 @@
     "from time import sleep\n",
     "from keras.preprocessing.image import img_to_array\n",
     "\n",
-    "face_classifier = cv2.CascadeClassifier('./Haarcascades/haarcascade_frontalface_default.xml')\n",
+    "face_classifier = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')\n",
     "\n",
     "def face_detector(img):\n",
     "    # Convert image to grayscale\n",
