Create Building an Emotion Detector with LittleVGG.ipynb

--- a/Emotion-Age-Gender-Detector/Building an Emotion Detector with LittleVGG.ipynb
+++ b/Emotion-Age-Gender-Detector/Building an Emotion Detector with LittleVGG.ipynb
@@ -347,7 +347,7 @@
     "from keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
     "\n",
     "                     \n",
-    "checkpoint = ModelCheckpoint(\"/home/Trained Models/emotion_little_vgg_3.h5\",\n",
+    "checkpoint = ModelCheckpoint(\"emotion_little_vgg_3.h5",\n",
     "                             monitor=\"val_loss\",\n",
     "                             mode=\"min\",\n",
     "                             save_best_only = True,\n",
@@ -634,7 +634,7 @@
     "from os.path import isfile, join\n",
     "from keras.preprocessing.image import img_to_array\n",
     "\n",
-    "face_classifier = cv2.CascadeClassifier('./Haarcascades/haarcascade_frontalface_default.xml')\n",
+    "face_classifier = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')\n",
     "\n",
     "def face_detector(img):\n",
     "    # Convert image to grayscale\n",
